[FIX] mail: `o_Activity_userAvatar` aspect-ratio
This commit fixes an issue causing the activity's avatar image to exceed
the available vertical space when in portrait mode.

The avatar's width/height are now fixed and its pic is set to cover the
available room only.

task-2795252

closes odoo/odoo#86566

--- a/addons/mail/static/src/components/activity/activity.scss
+++ b/addons/mail/static/src/components/activity/activity.scss
@@ -2,6 +2,10 @@
 // Layout
 // ------------------------------------------------------------------
 
+.o_Activity_userAvatar {
+    object-fit: cover;
+}
+
 .o_Activity_detailsUserAvatar {
     object-fit: cover;
     height: 18px;
@@ -18,6 +22,7 @@
 
 .o_Activity_sidebar {
     width: $o-mail-thread-avatar-size;
+    height: $o-mail-thread-avatar-size;
 }
 
 // From python template
